--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "author": "简单纯粹 <huihua.w@foxmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.9.7",
     "vuepress": "^1.9.7"
   },
   "scripts": {
     "dev": "vuepress dev docs --temp .temp",
     "docs:build": "vuepress build docs",
-    "deploy":"bash deploy.sh"
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "moment": "^2.29.3"
