--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "简单纯粹 <huihua.w@foxmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.9.7",
     "@vuepress/plugin-pwa": "^1.9.7",
     "vuepress": "^1.9.7"
   },
@@ -15,6 +16,9 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
-    "moment": "^2.29.3"
+    "@vssue/api-github-v4": "^1.4.7",
+    "@vssue/vuepress-plugin-vssue": "^1.4.8",
+    "moment": "^2.29.3",
+    "vssue": "^1.4.8"
   }
 }
