--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "dev": "vuepress dev docs --temp .temp",
     "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "cname":"bash cname.sh"
+
   },
   "dependencies": {
     "@vssue/api-github-v4": "^1.4.7",
