--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "scripts": {
     "dev": "vuepress dev docs --temp .temp",
     "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
+    "docs:nav": "vuepress nav docs",
+    "docs:navf": "vuepress nav docs -f"
   },
   "dependencies": {
     "@vssue/api-github-v4": "^1.4.7",
     "@vssue/vuepress-plugin-vssue": "^1.4.8",
     "moment": "^2.29.3",
-    "vssue": "^1.4.8"
+    "vssue": "^1.4.8",
+    "vuepress-plugin-auto-sidebar": "^2.3.2"
   }
 }
