--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "docs",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "https://github.com/applestven/docs.git",
-    "author": "简单纯粹 <huihua.w@foxmail.com>",
-    "license": "MIT",
-    "devDependencies": {
-      "@vuepress/plugin-back-to-top": "^1.9.7",
-      "@vuepress/plugin-medium-zoom": "^1.9.7",
-      "@vuepress/plugin-pwa": "^1.9.7",
-      "vuepress": "^1.9.7"
-    },
-    "scripts": {
-      "dev": "vuepress dev docs --temp .temp",
-      "start": "vuepress dev docs --temp .temp",
-      "docs:build": "vuepress build docs",
-      "deploy": "bash deploy.sh",
-      "docs:nav": "vuepress nav docs",
-      "docs:navf": "vuepress nav docs -f"
-    },
-    "dependencies": {
-      "@vssue/api-github-v4": "^1.4.7",
-      "@vssue/vuepress-plugin-vssue": "^1.4.8",
-      
-      "moment": "^2.29.3",
-      "vssue": "^1.4.8",
-      "vuepress-plugin-auto-sidebar": "^2.3.2"
-    }
+  "name": "docs",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/applestven/docs.git",
+  "author": "简单纯粹 <huihua.w@foxmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.9.7",
+    "@vuepress/plugin-medium-zoom": "^1.9.7",
+    "@vuepress/plugin-pwa": "^1.9.7",
+    "vuepress": "^1.9.7"
+  },
+  "scripts": {
+    "dev": "vuepress dev docs --temp .temp",
+    "start": "vuepress dev docs --temp .temp",
+    "docs:build": "vuepress build docs",
+    "deploy": "bash deploy.sh",
+    "docs:nav": "vuepress nav docs",
+    "docs:navf": "vuepress nav docs -f"
+  },
+  "dependencies": {
+    "@vssue/api-github-v4": "^1.4.7",
+    "@vssue/vuepress-plugin-vssue": "^1.4.8",
+    "moment": "^2.29.3",
+    "three": "^0.151.3",
+    "vssue": "^1.4.8",
+    "vuepress-plugin-auto-sidebar": "^2.3.2"
   }
+}
