--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -29,10 +29,11 @@ jobs:
           images: applestven/vite-project
 
       - name: Build and push Docker image  #构建和发布 docker镜像
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@2
         with:
           context: .
           push: true
+          file: ./Dockerfile
           tags: ${{ steps.meta.outputs.tags }}  #上一步所拿到的tags，默认是分支名字
           labels: ${{ steps.meta.outputs.labels }} # 上一步所拿到的labels
       - name: ssh docker login    # 登陆云服务器
