--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -29,7 +29,7 @@ jobs:
           images: applestven/vite-project
 
       - name: Build and push Docker image  #构建和发布 docker镜像
-        uses: docker/build-push-action@2
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
