一步到位 ，拜托5

--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install and Build
         run: |
           yarn install
-          yarn run docs:build
+          yarn docs:build
           
       - name: Log in to Docker Hub #登陆docker
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
