--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "dev": "vuepress dev docs --temp .temp",
     "start": "vuepress dev docs --temp .temp",
-    "docs:build": "set NODE_OPTIONS=--openssl-legacy-provider && vuepress build docs",
+    "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh",
     "docs:nav": "vuepress nav docs",
     "docs:navf": "vuepress nav docs -f"
