--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false    
-      - name: Install and Build
-        run: |
-          yarn install
-          yarn docs:build
+      # - name: Install and Build
+      #   run: |
+      #     yarn install
+      #     yarn docs:build
           
       - name: Log in to Docker Hub #登陆docker
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
