--- a/.github/workflows/deplay.yml
+++ b/.github/workflows/deplay.yml
@@ -29,7 +29,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: applestven/vite-project
+          images: applestven/docs
 
       - name: Build and push Docker image  #构建和发布 docker镜像
         uses: docker/build-push-action@v2
