--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
         git init
         git add -A
         git commit -m 'deploy'
+        git config --global user.email "applestven@gmail.com"
+        git config --global user.name "applestven"
 
     - name: Push to gh-pages branch
       run: |
