--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,15 +40,18 @@ jobs:
     - name: view config 2
       run: git remote -v
 
-    - name: Initialize and commit changes
-      run: |
-        git config --global user.email "applestven@gmail.com"
-        git config --global user.name "applestven"
-        git init
-        git add -A
-        git commit -m 'deploy'
+    - name: run deploy
+      run : npm run deploy  
+
+    # - name: Initialize and commit changes
+    #   run: |
+    #     git config --global user.email "applestven@gmail.com"
+    #     git config --global user.name "applestven"
+    #     git init
+    #     git add -A
+    #     git commit -m 'deploy'
         
 
-    - name: Push to gh-pages branch
-      run: |
-        git push -f https://${{ secrets.GIT_TOKEN }}@github.com/applestven/docs.git master:gh-pages
+    # - name: Push to gh-pages branch
+    #   run: |
+    #     git push -f https://${{ secrets.GIT_TOKEN }}@github.com/applestven/docs.git master:gh-pages
