--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         git config --global user.email "applestven@gmail.com"
         git config --global user.name "applestven"
+        git pull origin gh-pages
         git init
         git add -A
         git commit -m 'deploy'
