--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,4 @@ jobs:
         git commit -m 'deploy'
     - name: Push to gh-pages branch
       run: |
-        git push -f https://${{ secrets.GIT_TOKEN }}@github.com/applestven/docs.git HEAD:gh-pages
+        git push -f https://${{ secrets.SSHS }}@github.com/applestven/docs.git HEAD:gh-pages
