--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,10 @@ jobs:
 
     - name: Initialize and commit changes
       run: |
+        git config --global user.email "applestven@gmail.com"
+        git config --global user.name "applestven"
         git add -A
         git commit -m 'deploy'
     - name: Push to gh-pages branch
       run: |
-        git push -f https://${{ secrets.SSHS }}@github.com/applestven/docs.git HEAD:gh-pages
+        git push -f https://${{ secrets.GIT_TOKEN }}@github.com/applestven/docs.git HEAD:gh-pages
