--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,9 @@ jobs:
     - name: Install Dependencies 🔧
       run: npm i # 如果你的项目使用npm, 对于yarn则使用yarn install
 
+    - name: Build catalog
+      run: npm run navf  
+
     - name: Build Site 🏗️
       run: npm run build # 假设你的构建命令是这样的，根据你的实际构建命令修改
 
